# lyric-resolution-changer

./: .gitignore  Cargo.toml  bacon.toml  temp.txt
cli/: Cargo.toml
cli/src/: main.rs
parser/: Cargo.toml  LICENSE.md
parser/benches/: benchmark_1.rs  parsing.rs  writing.rs
parser/src/: chart.rs  components.rs  events.rs  global_event.rs  lib.rs  song.rs  song_property.rs  sync_track.rs  sync_track_event.rs  track.rs  track_event.rs
parser/tests/: s_hero.rs
src/: display.rs  main.rs  parser.rs
src/test_data/: test_events.txt  test_track.txt
webpage/: Cargo.toml
webpage/src/: main.rs
