[package]
name = "lyric-resolution-changer"
version = "0.1.0"
edition = "2021"
description = "Clone Hero chart file resolution changing made easy!"
license-file = "LICENSE.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
nom = "7.1.3"
