[package]
name = "lyric-resolution-changer-cli"
version = "0.2.7"
authors = ["aragonnetje6"]
edition = "2021"
description = "Clone Hero chart file resolution changing made easy! cli version"
repository = "https://github.com/aragonnetje6/lyric-resolution-changer"
license-file = "LICENSE.md"
workspace = "../"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
chart-file-parser = "0.3.1"
dhat = { version = "0.3.2", optional = true }
thiserror = "1.0.56"

[features]
dhat-heap = ["dep:dhat"]
