[package]
name = "chart-file-parser"
version = "0.1.0"
edition = "2021"
description = "Parser for .chart files"
license-file = "LICENSE.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "benchmark_1"
harness = false
