[package]
name = "chart-file-parser"
version = "0.4.5"
authors = ["aragonnetje6"]
edition = "2021"
description = "Parser for .chart files"
repository = "https://github.com/aragonnetje6/lyric-resolution-changer"
license-file = "LICENSE.md"
workspace = "../"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "parsing"
harness = false

[[bench]]
name = "writing"
harness = false
