[package]
name = "lyric-resolution-changer-webpage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.6.5", features = ["csr"] }
chart-file-parser = { workspace = true }
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.67", features = ["FileList", "HtmlInputElement", "File", "Blob"] }
wasm-bindgen = "0.2.90"
wasm-bindgen-futures = "0.4.40"
